# vortex_backtest

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.qlib  Dockerfile.spike  README.md  docker-compose.yml  pyproject.toml
deploy/: run.sh
design/: 01-code-review.md  02-architecture-decisions.md  03-productization-plan.md  04-dashboard-ui-spec.md  05-backtest-engine-requirements.md  06-qlib-spike-findings.md  07-vortex_data-qlib-export-requirements.md  08-container-strategy.md  09-execution-roadmap.md  10-api-protocol.md  11-realdata-backtest-and-qlib-status.md  12-qlib-realmachine-validation.md  13-p5-dashboard-design.md  14-engine-decision-revisit.md  15-trader-completion-plan.md  16-minute-level-upgrade.md  17-vortex_data-data-requirements.md  18-session-backtest-engine.md  19-adversarial-test-campaign.md
docs/: backtrader_minute_design.md  code-review-findings.md  operations.md  quickstart.md  usage-and-api.md  usage-guide.md
examples/: README.md  quickstart.py  run_30_day_http_sample.py  session_scenarios.py
scripts/: backtest_roundtrip.sh  build-qlib-image.sh  reconcile_statement.py  vendor-chart.sh
spike/: qlib_engine_demo.py  qlib_replay_spike.py
state/: vortex_backtest.sqlite3
tests/: conftest.py  test_adv_boundary.py  test_adv_contract_backtest.py  test_adv_determinism.py  test_adv_integration_realdata.py  test_adv_n8_corporate_actions.py  test_analytics.py  test_api.py  test_api_endpoints.py  test_benchmark.py  test_cli.py  test_cli_defaults.py  test_corporate_actions.py  test_dashboard_api.py  test_gateway_adapter.py  test_gateway_adapter_raw.py  test_golden_a_equals_b.py  test_golden_cases.py  test_golden_raw_vs_qfq.py  test_metrics.py  test_minute_backtest.py  test_qlib_engine.py  test_real_data_integration.py  test_reconcile.py  test_regression_bugs.py  test_report_api.py  test_session_api.py  test_session_engine.py  test_session_store.py  test_strategies.py  test_strategy_analytics.py  (+1 more)
(+33 files in other folders)
