[project]
name = "vortex-backtest"
version = "0.1.0"
description = "Independent HTTP backtest/account replay service for Vortex."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78",
    "fastapi>=0.128.0",
    "pandas>=2.2",
    "pyarrow>=16",
    "pydantic>=2.7",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]
sample = [
    "httpx>=0.27",
]
spike = [
    "pyqlib>=0.9",
]
[project.scripts]
vortex-backtest = "vortex_backtest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 显式声明包，避免 setuptools 把 design/ spike/ 等根目录当成待打包的包而报错
packages = ["vortex_backtest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
